deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ovro-system
  labels:
    app.kubernetes.io/name: ovro
